working towards zenodo integration #212